--- a/python/test.ipynb
+++ b/python/test.ipynb
@@ -44,6 +44,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1744, 2400, 3)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "im.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [
